Add "how many?" button

--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 .content {
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .container-sketch {
