Fix sketchNumber remove() issues
Used document.querySelectorAll('.sketch-pixel') instead
of variable name during remove() to recount the sketchNumber
before adding more.

Previously, if the number the user enters was less than the
amount already displayed, not all sketches would be deleted.

--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ body {
 
 .container-sketch {
     display: flex;
-    width: 500px;
+    height: 960px;
+    width: 960px;
     flex-wrap: wrap;
 }
 
 .sketch-pixel {
-    height: 100px;
-    width: 100px;
+    flex:1;
     border: 1px solid black;
 }
