Make three test grids equal
But why is the output width/heigh just a few pixels
different than the input?

--- a/pages/test.css
+++ b/pages/test.css
@@ -1,21 +1,39 @@
 body {
-    height: 100vh;
-    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    height: 100vh;
+    margin: 0;
+
+    box-sizing: border-box;
 }
 
 .container {
-    margin: 20px;
     display: flex;
-    width: 960px;
     flex-wrap: wrap;
-    min-height: 960px;
     justify-content: flex-start;
+
+    margin: 20px;
+    width: 960px;
+    min-height: 960px;
 }
 
 .sketch {
+    flex: 1;
+
+    background-color: rgb(255, 240, 240);
     border: 2px solid black;
-    flex-grow: 1;
+}
+
+.sixteen > div {
+    flex-basis: 237px;
+}
+
+.thirtytwo > div {
+    flex-basis: 157px;
+}
+
+.four > div {
+    flex-basis: 477px;
 }
