--- a/style.css
+++ b/style.css
@@ -17,14 +17,17 @@ body {
 
 .container-sketch {
     display: flex;
-    width: 960px;
-    height: 960px;
     flex-wrap: wrap;
+    justify-content: flex-start;
+
+    margin: 20px;
+    width: 960px;
+    min-height: 960px;
+    max-height: 960px;
 }
 
 .sketch-pixel {
     flex: 1;
-    flex-basis: 240px;
-    height: 240px;
+    flex-basis: 237px;
     border: 1px solid black;
 }
